--- a/style/sass.scss
+++ b/style/sass.scss
@@ -13,7 +13,7 @@ body {
 
 .container {
     width: 100%;
-    border: 2px solid red;
+    // border: 2px solid red;
     display: flex;
     justify-content: center;
 
